--- a/app-front/src/app/app.component.html
+++ b/app-front/src/app/app.component.html
@@ -50,11 +50,11 @@
       <div *ngIf="editingTask?.id === task.id" class="task-edit">
         <input
           type="text"
-          [(ngModel)]="editingTask.title"
+          [(ngModel)]="editingTask!.title"
           placeholder="Titre"
         />
         <textarea
-          [(ngModel)]="editingTask.description"
+          [(ngModel)]="editingTask!.description"
           placeholder="Description"
         ></textarea>
         <div class="task-actions">
